Updated `how to use` on workflow templates page to be roboto font. Fixed issue where button's content was not centered.

--- a/pocs/dag-ui-angular/src/styles/styles.scss
+++ b/pocs/dag-ui-angular/src/styles/styles.scss
@@ -167,6 +167,8 @@ a {
   .mat-button-wrapper {
     line-height: 44px;
     font-size: 16px;
+    display: flex;
+    align-items: center;
   }
 }
 
@@ -290,5 +292,10 @@ a {
       color: white;
     }
   }
+}
+
+.help-link {
+  font-family: $fontRoboto;
+  font-size: $fontSmallRegular;
 }
 
